--- a/package.json
+++ b/package.json
@@ -10,12 +10,35 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@freakycoder/react-native-bounceable": "^0.2.5",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.3",
+    "@rneui/themed": "^4.0.0-rc.3",
+    "algoliasearch": "^4.13.0",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-instantsearch-dom": "^6.25.0",
+    "react-instantsearch-native": "^6.25.0",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-animated-spinkit": "^1.5.2",
+    "react-native-dynamic-search-bar": "^2.0.2",
+    "react-native-element-dropdown": "^1.8.11",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "1.13.4",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
+    "react-native-search-bar": "^3.5.1",
+    "react-native-sectioned-multi-select": "^0.9.1",
+    "react-native-swipe-item": "^0.6.1",
+    "react-native-swipeable": "^0.6.0",
+    "react-native-toast-message": "^2.1.5",
+    "react-native-web": "0.17.7",
+    "expo-application": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
